tests/errors/BadPragma0.hs
{-@ LIQUID "--expect-error-containing=Illegal pragma" @-}
{-@ LIQUID "--idirs=.." @-}

module BadPragma0 where

i :: Int
i = 1

